# timevault-rs

./: .gitignore  Cargo.toml  readme.md  rustfmt.toml
.github/workflows/: rust.yml
.junie/: guidelines.md
chaos-runner/: Cargo.toml
chaos-runner/src/: main.rs
doc/: design.md  openraft.md  openraft_log_storage.md  openraft_state.md  openraft_state_machine.md
examples/example-test-utils/: Cargo.toml
examples/example-test-utils/src/: lib.rs
examples/openraft-example/: Cargo.toml
examples/openraft-example/src/: app.rs  client.rs  domain.rs  lib.rs  node.rs  state.rs  state_machine.rs  storage.rs
examples/openraft-example/src/http/: admin.rs  app.rs  health.rs  mod.rs  raft.rs  transfer.rs
examples/openraft-example/src/network/: api.rs  management.rs  mod.rs  raft.rs  raft_network_impl.rs  transfer.rs
examples/openraft-example/src/raft/: mod.rs  network_impl.rs
examples/openraft-example/tests/cluster/: main.rs  test_cluster.rs  test_cluster_follower_replacement.rs  test_cluster_restart.rs  test_cluster_simple.rs  test_cluster_stress.rs
src/: config.rs  errors.rs  lib.rs
src/admin/: introspect.rs  mod.rs
src/disk/: chunk.rs  index.rs  manifest.rs  metadata.rs  mod.rs
src/partition/: append.rs  common.rs  mod.rs  purge.rs  read.rs  recovery.rs  truncate.rs
src/plugins/: jsonl.rs  mod.rs
src/raft/: app.rs  errors.rs  log.rs  mod.rs  state.rs  storage.rs  tests.rs
src/store/: locks.rs  mod.rs  open.rs  openraft_adapter.rs  paths.rs
src/testing/: mod.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs
tests/: append_edge_tests.rs  append_persistent_test.rs  append_roll_tests.rs  create_partition_tests.rs  locks_tests.rs  openraft_adapter_tests.rs  purge_tests.rs  raft_tests.rs  read_range_tests.rs  recovery_tests.rs  stress_parallel_tests.rs  truncate_tests.rs
tests/common/: mod.rs
timevault/: Cargo.toml
timevault/src/: errors.rs  lib.rs  types.rs
timevault/src/admin/: health.rs
timevault/src/disk/: atomic.rs  index.rs  manifest.rs  metadata.rs
timevault/src/partition/: append.rs  misc.rs  mod.rs  purge.rs  read.rs  recovery.rs  roll.rs  truncate.rs
timevault/src/plugins/: jsonl.rs  jsonl_struct.rs  mod.rs
timevault/src/raft/: errors.rs  log.rs  mod.rs  paths.rs  state.rs  tests.rs
timevault/src/store/: fsync.rs  locks.rs  mod.rs  paths.rs  snapshot.rs  transfer.rs
timevault/src/store/admin/: introspect.rs  mod.rs  stats.rs
timevault/src/store/disk/: atomic.rs  chunk.rs  index.rs  manifest.rs  metadata.rs  mod.rs
timevault/src/store/partition/: append.rs  misc.rs  mod.rs  purge.rs  read.rs  recovery.rs  retention.rs  roll.rs  truncate.rs
timevault/src/store/plugins/: jsonl.rs  jsonl_struct.rs  mod.rs
timevault/tests/: append_edge_tests.rs  append_persistent_test.rs  append_roll_tests.rs  append_tests.rs  create_partition_tests.rs  locks_tests.rs  purge_tests.rs  read_range_tests.rs  recovery_tests.rs  snapshot_tests.rs  stress_parallel_tests.rs  truncate_tests.rs
