[package]
name = "timevault"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/spxbhuhb/timevault-rs"
description = "Time-indexed record store for partitioned streams with append-only chunks and background merges."
keywords = ["time-series", "storage", "tsdb", "log-structured", "embedded"]
categories = ["database-implementations", "data-structures", "filesystem"]
readme = "README.md"

[badges]
maintenance = { status = "experimental" }

[features]
default = []

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde"] }
fs2 = "0.4"
parking_lot = "0.12"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
tempfile = "3"
memchr = "2"
