[package]
name = "timevault"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/spxbhuhb/timevault-rs"
description = "Time-indexed record store for partitioned streams with append-only chunks and background merges."
keywords = ["time-series", "storage", "tsdb", "log-structured", "embedded"]
categories = ["database-implementations", "data-structures", "filesystem"]
readme = "readme.md"

[badges]
maintenance = { status = "experimental" }

[features]
default = []
stress-tests = []
openraft-adapter = ["dep:openraft", "dep:async-trait"]

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde"] }
fs2 = "0.4"
parking_lot = "0.12"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
tempfile = "3"
memchr = "2"
openraft = { version = "0.9.21", default-features = false, features = ["serde"], optional = true }
async-trait = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt","rt-multi-thread"] }
