[package]
name = "timevault"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/spxbhuhb/timevault-rs"
description = "Time-indexed record store for partitioned streams with append-only chunks and background merges."
keywords = ["time-series", "storage", "tsdb", "log-structured", "embedded"]
categories = ["database-implementations", "data-structures", "filesystem"]
readme = "readme.md"

[badges]
maintenance = { status = "experimental" }

[features]
default = []
stress-tests = []

[dependencies]
fs2 = "0.4"
memchr = "2"
openraft = { version = "0.9.21", features = ["serde","storage-v2"] }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1"
uuid = { version = "1", features = ["v7", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt","rt-multi-thread"] }
