[package]
name = "example-test-utils"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1", features = ["rt","rt-multi-thread", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v7"] }

# Use utilities already in the workspace for per-test directories
test-utils = { path = "../../test-utils" }

# Access the example crate to spawn nodes and build clients
openraft-example = { path = "../openraft-example" }

