[package]
name = "openraft-example"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "openraft-example"
path = "src/bin/main.rs"

[features]
long-running-test = []

[dependencies]
timevault = { path = "../../timevault" }
openraft = { version = "0.9.21", features = ["serde","storage-v2"] }
actix-web = "4.0.0-rc.2"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt","rt-multi-thread", "macros", "sync", "time"] }
uuid = { version = "1", features = ["v7", "v5", "serde"] }
reqwest = { version = "0.12.23", features = ["json","blocking"] }
anyhow = "1.0.63"
maplit = "1.0.2"
parking_lot = "0.12"

[dev-dependencies]
example-test-utils = { path = "../example-test-utils" }
